# contra

./: CMakeLists.txt  ContraConfig.cmake.in  LICENSE.md  README.md  basename.lua  config.hpp  example.c  example.lua  fantasy.cta  fantasy.lua  syntax.cta
cmake/: FindLegion.cmake  regression.cmake  rocm_helpers.cmake  run_test.cmake  test.cmake
docs/: advanced.md  home.md  manual.md  reference.md  tutorial.md
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt
examples/c/06_matmul/: CMakeLists.txt  matmul.cpp
examples/conditional/: CMakeLists.txt  if.cta  ifelse.cta  ifelse.std  ifelseif.cta  ifelseif.std
examples/contra/: CMakeLists.txt
examples/contra/00_hello_world/: CMakeLists.txt  hello.cta
examples/contra/01_fizz_buzz/: CMakeLists.txt  fizz_buzz.cta
examples/contra/01_fizzbuzz/: CMakeLists.txt  fizzbuzz.cta
examples/contra/02_fibonacci/: CMakeLists.txt  fibonacci.cta
examples/contra/03_index_space/: CMakeLists.txt  index_space.cta
examples/contra/03_index_task/: CMakeLists.txt  index_task.cta
examples/contra/04_index_space/: CMakeLists.txt  index_space.cta
examples/contra/05_partition/: CMakeLists.txt  disjoint.cta  overlap.cta  partition.cta
examples/contra/06_matmul/: CMakeLists.txt  matmul.cta
examples/contra/07_reduction/: CMakeLists.txt  reduction.cta
examples/contra/conditional/: if.cta  ifelse.cta
examples/contra/fibonacci/: CMakeLists.txt  fibonacci.cta
examples/contra/functions/: CMakeLists.txt  functions1.cta  functions1.std  functions2.std  functions3.std
examples/contra/fv1d/: fvm.cta  main.cta  parallel.cta  parallel.v1.cta  parallel.v2.cta  parallel.v3.cta  plot.py  serial.cta
examples/contra/hello_world/: hello_legion.cta
examples/contra/loops/: loops.cta  loops.std
examples/contra/variables/: CMakeLists.txt  arrays1.std  arrays2.std  arrays3.std  variables.std
examples/cuda/00_hello_world/: CMakeLists.txt  hello.cpp
examples/functions/: CMakeLists.txt  functions.cta
examples/fv1d/: main.cta
examples/hello_world/: CMakeLists.txt  hello.cta  hello.std
examples/hpx/00_hello_world/: CMakeLists.txt  hello.cpp
examples/kokkos/: CMakeLists.txt
examples/kokkos/00_hello_world/: CMakeLists.txt  hello.cpp
examples/kokkos/03_index_task/: CMakeLists.txt  index_task.cpp
examples/legion/: CMakeLists.txt
examples/legion/00_hello_world/: CMakeLists.txt  hello.cpp
examples/legion/01_fizzbuzz/: fizzbuzz.cpp
examples/legion/02_fibonacci/: fibonacci.cpp
examples/legion/03_index_space/: CMakeLists.txt  index_space.cpp
examples/legion/03_index_task/: CMakeLists.txt  index_task.cpp
examples/legion/04_index_space/: index_space.cpp
examples/legion/fibonacci/: CMakeLists.txt  fibonacci.cpp
examples/legion/fizzbuzz/: CMakeLists.txt  fizzbuzz.cpp
examples/legion/hello/: CMakeLists.txt
examples/loops/: CMakeLists.txt  loops.cta
examples/rocm/00_hello_world/: CMakeLists.txt  hello.cpp
examples/sample/: CMakeLists.txt  sample.cta  sample.std
examples/variables/: CMakeLists.txt  arrays.cta  arrays1.cta  arrays2.cta  arrays3.cta  variables.cta
librt/: CMakeLists.txt  dopevector.cpp  dopevector.hpp  librt.cpp  librt.hpp  llvm_forwards.hpp  math.cpp  math.hpp  print.cpp  print.hpp
src/: CMakeLists.txt  ContraJIT.hpp  analysis.cpp  analysis.hpp  args.cpp  args.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  config.h.in  config.hpp.in  context.cpp  contra.cpp  contra.hpp  dispatcher.hpp  errors.hpp  expression.hpp  formatter.hpp  identifier.hpp  jit.hpp  lexer.cpp  lexer.hpp  llvm.cpp  llvm.hpp  llvm_utils.hpp  main.cpp  parser.cpp  parser.hpp  precedence.hpp  rtlib.cpp  rtlib.hpp  sourceloc.hpp  string_utils.cpp  string_utils.hpp  symbols.hpp  token.cpp  token.hpp  vartype.cpp  vartype.hpp  (+2 more)
src/contra/: CMakeLists.txt  GlobalMappingLayer.h  analysis.cpp  analysis.hpp  args.cpp  args.hpp  array.hpp  ast.cpp  ast.hpp  backends.hpp  codegen.cpp  codegen.hpp  communicator.cpp  communicator.hpp  communicator_mpi.cpp  communicator_mpi.hpp  compiler.cpp  compiler.hpp  config.hpp  context.cpp  context.hpp  contra.cpp  contra.hpp  contra_cuda.cu  cuda.cpp  cuda.hpp  cuda_jit.cpp  cuda_jit.hpp  cuda_reduce.cu  cuda_reduce.hpp  cuda_rt.cpp  cuda_rt.cu  cuda_rt.hpp  cuda_utils.cu  cuda_utils.hpp  debug.cpp  debug.hpp  device_jit.cpp  device_jit.hpp  dispatcher.hpp  (+86 more)
src/librt/: CMakeLists.txt  dllexport.h  dopevector.cpp  dopevector.hpp  librt.cpp  librt.hpp  llvm_forwards.hpp  llvm_includes.hpp  math.cpp  math.cu  math.hpp  print.cpp  print.hpp  range.cpp  range.hpp  reduction.cpp  reduction.hpp  timer.cpp  timer.hpp
src/librtcuda/: CMakeLists.txt  cuda_utils.cu
src/librtmpi/: mpi_utils.hpp
src/librtrocm/: CMakeLists.txt  rocm_builtins.h  rocm_scratch.h  rocm_scratch.ll  rocm_utils.cpp  rocm_utils.hpp
src/llvm/: CMakeLists.txt
src/llvm-ext/: CMakeLists.txt
src/llvm-ext/Transforms/Utils/: AMDGPUEmitPrintf.cpp
src/utils/: CMakeLists.txt  builder.cpp  builder.hpp  file_utils.hpp  llvm_utils.cpp  llvm_utils.hpp  string_utils.cpp  string_utils.hpp
testing/: CMakeLists.txt
testing/00_hello_world/: CMakeLists.txt  comments.cta  comments.std  print.cta  print.std
testing/01_primitives/: CMakeLists.txt  arrays.cta  arrays.std  assignment.cta  assignment.std  bool.cta  bool.std  primitives.cta  primitives.std
testing/02_assignment/: CMakeLists.txt  assign.cta
testing/02_control_flow/: CMakeLists.txt  break.cta  break.std  functions.cta  functions.std  if.cta  if.std  loops.cta  loops.std  range.cta
testing/conditional/: CMakeLists.txt
testing/fibonacci/: CMakeLists.txt  fibonacci.cta  fibonacci.dot.std  fibonacci.std
testing/fizzbuzz/: CMakeLists.txt  fizzbuzz.cta  fizzbuzz.dot.std  fizzbuzz.std
testing/functions/: CMakeLists.txt  functions2.cta  functions3.cta  functions4.cta  functions4.std
testing/hello_world/: CMakeLists.txt
testing/loops/: CMakeLists.txt  range.std
testing/matmul/: CMakeLists.txt  matmul.cta  matmul.dot.std
testing/sample/: CMakeLists.txt  sample.cta
testing/variables/: CMakeLists.txt  assign.cta  assign.std  global.cta
(+2 files in other folders)
